--- a/ProductManager/Tappe.csproj
+++ b/ProductManager/Tappe.csproj
@@ -94,6 +94,9 @@
     <Compile Include="Forms\FrmAddStock.Designer.cs">
       <DependentUpon>FrmAddStock.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FrmCreateInvoice.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Forms\FrmCreateItem.cs">
       <SubType>Form</SubType>
     </Compile>
