--- a/Utilities/Utilities.csproj
+++ b/Utilities/Utilities.csproj
@@ -39,6 +39,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArrayComparator.cs" />
     <Compile Include="IOC.cs" />
   </ItemGroup>
   <ItemGroup>
